# ngp-baseline-tcnn

./: AGENTS.md  CMakeLists.txt  CUDA_MODERNIZATION.md  ROADMAP.md
include/instantngp/core/: checkpoint.hpp  config.hpp  cuda_examples.hpp  cuda_utils.hpp  device_buffer.hpp  expected_compat.hpp  json_writer.hpp  math.hpp  network.hpp  occupancy_grid.hpp
include/instantngp/io/: hostpack_loader.hpp
src/: main.cpp
src/core/: config.cpp  network.cu  occupancy_grid.cu
src/io/: hostpack_loader.cpp
